--- a/product-detail3.html
+++ b/product-detail3.html
@@ -32,6 +32,7 @@
                 <img src="images/tafelHout.jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
 
             </div>
+            <!-- info's over producten -->
 
             <div class="info-gebied">
                 <h1 class="product-naam"> gratis salontafel</h1>
@@ -45,6 +46,7 @@
                 </button>
             </div>
         </section>
+        <!-- Beschrijving van het product -->
 
         <section class="beschrijving">
             <h3>Beschrijving</h3>
@@ -74,31 +76,47 @@
 
                 </div>
         </section>
+        <!-- Commentaar reviews van andere gebruikers -->
+
         <section>
             <section class="commentaar-sectie">
                 <h3>gerelateerde producten</h3>
                 <div class="commentaar-rij">
                     <div class="commentaar-vak 2">
-                        <img src="images/tafel5.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Eiken tafel | Tafelblad |.</h3>
-                        <h4>€ 95</h4>
+                        <a href="product-detail.html" class="product-link">
+                            <div class="product-card">
+                                <img src="images/tafel5.jpg" alt="afbeelding van een tafel" class="afbeelding">
+                                <h3>Eiken tafel | Tafelblad |.</h3>
+                                <h4>€ 95</h4>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="commentaar-vak 2">
-                        <img src="images/tafel6.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Eiken eettafel/tafel</h3>
-                        <h4>€ 50</h4>
+                        <a href="product-detail.html" class="product-link">
+                            <div class="product-card">
+                                <img src="images/tafel6.jpg" alt="afbeelding van een tafel 2" class="afbeelding">
+                                <h3>Eiken eettafel/tafel</h3>
+                                <h4>€ 50</h4>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="commentaar-vak 2">
-                        <img src="images/tafel7.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Livingtafel </h3>
-                        <h4>€ 20</h4>
-                    </div>
+                        <a href="product-detail.html" class="product-link">
+                            <div class="product-card">
+                                <img src="images/tafel7.jpg" alt="afbeelding van een tafel 3" class="afbeelding">
+                                <h3>Livingtafel </h3>
+                                <h4>€ 20</h4>
+                            </div>
 
+                        </a>
+                    </div>
 
             </section>
             <br>
+            <!-- Footer met extra informatie -->
+
             <footer>
                 <div class="footer-container">
                     <div class="footer-column">
