--- a/product-detail5.html
+++ b/product-detail5.html
@@ -35,6 +35,7 @@
                     <img src="images/bed8.jpg" alt="afbeelding 3" class="afbeelding">
                 </div>
             </div>
+            <!-- info's over producten -->
 
             <div class="info-gebied">
                 <h1 class="product-naam"> Elektrisch Hoog LAAG LAAG Bed</h1>
@@ -48,6 +49,7 @@
                 </button>
             </div>
         </section>
+        <!-- Beschrijving van het product -->
 
         <section class="beschrijving">
             <h3>Beschrijving</h3>
@@ -67,6 +69,7 @@
             </p>
 
         </section>
+        <!-- Commentaar reviews van andere gebruikers -->
 
         <section class="commentaar-sectie">
             <h3>Wat zeggen anderen?</h3>
@@ -100,25 +103,39 @@
             <h3>gerelateerde producten</h3>
             <div class="commentaar-rij">
                 <div class="commentaar-vak 2">
-                    <img src="images/bed5.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>éénpersoons bed.</h3>
-                    <h4>€ 95</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/bed5.jpg" alt="afbeelding van een bed" class="afbeelding">
+                            <h3>éénpersoons bed.</h3>
+                            <h4>€ 95</h4>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="commentaar-vak 2">
-                    <img src="images/bed6.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>Boxspring Napoli Deluxe</h3>
-                    <h4>€ 260</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/bed6.jpg" alt="afbeelding van een bed 2" class="afbeelding">
+                            <h3>Boxspring Napoli Deluxe</h3>
+                            <h4>€ 260</h4>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="commentaar-vak 2">
-                    <img src="images/bed7.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>Barrel Sauna</h3>
-                    <h4>€ 2.200,00</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/bed7.jpg" alt="afbeelding van een bed 3" class="afbeelding">
+                            <h3>Barrel Sauna</h3>
+                            <h4>€ 2.200,00</h4>
+                        </div>
+                    </a>
                 </div>
 
 
         </section>
+        <!-- Footer met extra informatie -->
+
         <footer>
             <div class="footer-container">
                 <div class="footer-column">
