--- a/product-detail6.html
+++ b/product-detail6.html
@@ -38,6 +38,7 @@
                     <img src="images/kat5 (3).jpg" alt="afbeelding 2" class="afbeelding">
                 </div>
             </div>
+            <!-- info's over producten -->
 
             <div class="info-gebied">
                 <h1 class="product-naam"> Kattenpaal Design | Sisal |</h1>
@@ -67,6 +68,7 @@
             </p>
 
         </section>
+        <!-- Beschrijving van het product -->
 
         <section class="commentaar-sectie">
             <h3>Wat zeggen anderen?</h3>
@@ -96,31 +98,46 @@
     </div>
     </section>
 
+    <!-- Commentaar reviews van andere gebruikers -->
 
     <section>
         <section class="commentaar-sectie">
             <h3>gerelateerde producten</h3>
             <div class="commentaar-rij">
                 <div class="commentaar-vak 2">
-                    <img src="images/miauw.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>tectake Krabpaal Mogli</h3>
-                    <h4>€ 74,90</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/miauw.jpg" alt="afbeelding van een katte boom" class="afbeelding">
+                            <h3>tectake Krabpaal Mogli</h3>
+                            <h4>€ 74,90</h4>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="commentaar-vak 2">
-                    <img src="images/miauw2.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>tectake Krabpaal Marcel</h3>
-                    <h4>€ 75</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/miauw2.jpg" alt="afbeelding van een katte boom 2" class="afbeelding">
+                            <h3>tectake Krabpaal Marcel</h3>
+                            <h4>€ 75</h4>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="commentaar-vak 2">
-                    <img src="images/miauw3.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>tectake Krabpaal Nelly</h3>
-                    <h4>€ 50</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/miauw3.jpg" alt="afbeelding van een katte boom 3" class="afbeelding">
+                            <h3>tectake Krabpaal Nelly</h3>
+                            <h4>€ 50</h4>
+                        </div>
+                    </a>
                 </div>
 
 
         </section>
+        <!-- Footer met extra informatie -->
+
         <footer>
             <div class="footer-container">
                 <div class="footer-column">
